--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Trumeneva</title>
 
     <!-- Favicons -->
-    <link rel="icon" href="assets/img/favicons/favicon.ico" />
+    <link rel="icon" href="assets/img/favicons/favicon.png" />
 
     <!-- Custom styles for this template with bootstrap css -->
     <!-- build:css -->
@@ -16,6 +16,9 @@
   </head>
 
   <body>
+
+    <partial src="1.html" title="Some title"></partial>
+    
     
     <!-- Bootstrap 5 Javascript -->
     <script
