--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="icon" href="assets/img/favicons/favicon.png" />
 
     <!-- Custom styles for this template with bootstrap css -->
-    <link href="assets/css/app.css" rel="stylesheet" type="text/css" />
+    <!-- build:css -->
+    <link href="assets/css/app.css" rel="stylesheet" type="text/css">
+    <!-- endbuild -->
     
   </head>
 
@@ -131,7 +133,9 @@
       src="assets/js/vendor/bootstrap.bundle.min.js"
       type="text/javascript"
     ></script>    
+    <!-- build:js -->
     <script src="assets/js/app.js"></script>
+    <!-- endbuild -->
     
   </body>
 </html>
