--- a/index.html
+++ b/index.html
@@ -97,7 +97,26 @@
     </div>
 
     <main>
-      
+      <section class="hero-section">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-2 align-items-center">
+            <div class="hero-text col d-flex flex-column">
+              <div class="hero-heading d-flex flex-column">
+                <h1 class="mb-0">TruMenEva</h1>
+                <h3 class="mb-0">здесь ты можешь быть счастливым</h3>
+              </div>
+              <p class="mb-0">Это пространство позитивного ментального здоровья.</p>
+              <a href="#" class="btn btn-lg btn-primary align-self-start rounded-pill d-none d-md-flex">Присоединиться к комьюнити</a>
+            </div>
+            <div class="hero-media col d-flex flex-column">
+              <div class="media-card">
+                <img src="./assets/img/hero-image.jpg" alt="" class="img-fluid" />
+              </div>
+              <a href="#" class="btn btn-lg btn-primary rounded-pill d-md-none">Присоединиться к комьюнити</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
