--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </div>
 
     <main>
+      
       <section class="hero-section">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-2 align-items-center">
@@ -117,6 +118,215 @@
           </div>
         </div>
       </section>
+
+      <section class="specialists-section">
+        <div class="container-fluid d-flex flex-column">
+          <div class="d-flex flex-column flex-lg-row justify-content-lg-between gap-2">
+            <h2 class="h2 mb-0">Специалисты</h2>
+            <a href="#" class="read-more-btn d-flex align-items-center gap-2">
+              Смотреть всех
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <path d="M12.5625 5.25L19.3125 12L12.5625 18.75M18.375 12L4.6875 12" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </a>
+          </div>          
+          <div class="specialists-slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-teal">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-purple">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                </div>
+              </div>
+            </div>            
+            <div class="swiper-button-prev d-none d-md-flex">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
+                <path d="M8.5 14.8096L1.5 7.80957L8.5 0.80957" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div class="swiper-button-next d-none d-md-flex">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
+                <path d="M1.5 0.80957L8.5 7.80957L1.5 14.8096" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
@@ -155,6 +365,12 @@
       </div>
     </footer>
     
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     <script
       src="./assets/js/vendor/bootstrap.bundle.min.js"
       type="text/javascript"
