Container width adjustments

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     
     <div class="site-alert bg-primary d-flex flex-column justify-content-center">
-      <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center text-white gap-2">
+      <div class="container-fluid d-flex flex-column flex-md-row justify-content-between align-items-center text-white gap-2">
         <p class="mb-0 fw-medium text-center">Текст со специальным предложением</p>
         <div class="d-flex align-items-center gap-3">
           <span class="fw-medium">Осталось</span>
@@ -107,13 +107,13 @@
                 <h3 class="mb-0">здесь ты можешь быть счастливым</h3>
               </div>
               <p class="mb-0">Это пространство позитивного ментального здоровья.</p>
-              <a href="#" class="btn btn-lg btn-primary align-self-start rounded-pill d-none d-md-flex">Присоединиться к комьюнити</a>
+              <a href="#" class="btn btn-lg btn-primary align-self-start rounded-pill d-none d-md-flex text-truncate">Присоединиться к комьюнити</a>
             </div>
             <div class="hero-media col d-flex flex-column">
               <div class="media-card">
                 <img src="./assets/img/hero-image.jpg" alt="" class="img-fluid" />
               </div>
-              <a href="#" class="btn btn-lg btn-primary rounded-pill d-md-none">Присоединиться к комьюнити</a>
+              <a href="#" class="btn btn-lg btn-primary rounded-pill d-md-none text-truncate">Присоединиться к комьюнити</a>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -201,7 +201,7 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -237,7 +237,7 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -273,7 +273,7 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -309,7 +309,43 @@
                       <li class="rounded-pill">Отношения с партнером</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-sm btn-gradient rounded-pill">Связаться со специалистом</a>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="specialist-card card d-flex flex-column mb-md-4">
+                  <div class="card-img rounded-circle overflow-hidden align-self-center border-primary">
+                    <img src="./assets/img/specialist.jpg" alt="Иван Иванов" class="img-fluid" />
+                  </div>
+                  <div class="d-flex flex-column align-items-center gap-1">
+                    <h4 class="h6 fw-medium mb-0">Иван Иванов</h4>
+                    <ul class="card-meta list-unstyled d-flex align-items-center mb-0">
+                      <li>Психотерапевт</li>
+                      <li>Стаж 18 лет</li>
+                    </ul>
+                  </div>
+                  <div class="card-price d-flex gap-1 align-items-center">
+                    <span class="price-value fw-medium">15$</span>
+                    <span class="price-label">30 мин</span>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Методы</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Коучинг</li>
+                      <li class="rounded-pill">Гештальт</li>
+                      <li class="rounded-pill">НЛП</li>
+                      <li class="rounded-pill">Психоанализ</li>
+                    </ul>
+                  </div>
+                  <div class="card-services d-flex flex-column gap-2">
+                    <p class="service-label mb-0 ">Запросы на проработку</p>
+                    <ul class="service-list list-unstyled mb-0 d-flex gap-1 flex-wrap">
+                      <li class="rounded-pill">Отношения с детьми</li>
+                      <li class="rounded-pill">Нет друзей</li>
+                      <li class="rounded-pill">Отношения с партнером</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="btn btn-sm btn-gradient rounded-pill text-truncate">Связаться со специалистом</a>
                 </div>
               </div>
             </div>            
