Content section completed

--- a/index.html
+++ b/index.html
@@ -363,6 +363,24 @@
         </div>
       </section>
 
+      <section class="content-section bg-light">
+        <div class="container">
+          <div class="row g-5 row-cols-1 row-cols-md-2 align-items-center">
+            <div class="text-col col d-flex flex-column gap-4 gap-lg-5 order-md-last">
+              <h2 class="mb-0">Специалистам</h2>
+              <div class="d-flex flex-column gap-3 gap-lg-4">
+                <p>Все больше людей хотят помогать другим, становясь психологами, коучами. Но как сложно бывает найти именно своего специалиста, который реально поможет.</p>
+                <p>TruMen Eva дает возможность каждому специалисту найти своего клиента. А каждому человеку сделать правильный выбор.</p>
+              </div>  
+              <a href="#" class="btn btn-lg btn-primary align-self-sm-start rounded-pill text-truncate">Присоединиться к комьюнити</a>
+            </div>
+            <div class="col d-flex flex-column align-items-center">
+              <img src="./assets/img/content-image-1.png" alt="" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
