Blog section completed

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
       <!-- Blog -->
       <section class="blog-section">
-        <div class="container-fluid d-flex flex-column">
+        <div class="container-fluid d-flex flex-column gap-5 gap-lg-4">
           <div class="d-flex flex-column flex-lg-row justify-content-lg-between gap-2">
             <h2 class="h2 mb-0">Блог</h2>
             <a href="#" class="read-more-btn d-flex align-items-center gap-2">
@@ -399,12 +399,77 @@
           <div class="posts-slider swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="post-card card d-flex flex-column">
-                  
-                </div>
+                <article class="post-card card my-md-3">
+                  <a href="#">
+                    <div class="card-img card-img-top">
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                    </div>
+                    <div class="card-body p-3 d-flex flex-column gap-2">
+                      <span>24 Дек, 2024</span>
+                      <h2 class="h6 fw-medium text-black mb-0">Название статьи</h2>
+                      <p class="mb-0">С другой стороны новая модель организационной деятельности представляет собой интересный эксперимент проверки форм развития. Повседневная практика показывает, что новая модель организационной деятельности требуют от нас анализа соответствующий условий активизации.</p>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="post-card card my-md-3">
+                  <a href="#">
+                    <div class="card-img card-img-top">
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                    </div>
+                    <div class="card-body p-3 d-flex flex-column gap-2">
+                      <span>24 Дек, 2024</span>
+                      <h2 class="h6 fw-medium text-black mb-0">Название статьи</h2>
+                      <p class="mb-0">Не следует, однако забывать, что постоянный количественный рост и сфера нашей активности способствует подготовки и реализации направлений прогрессивного развития. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности позволяет оценить значение соответствующий условий активизации.</p>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="post-card card my-md-3">
+                  <a href="#">
+                    <div class="card-img card-img-top">
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                    </div>
+                    <div class="card-body p-3 d-flex flex-column gap-2">
+                      <span>24 Дек, 2024</span>
+                      <h2 class="h6 fw-medium text-black mb-0">Название статьи</h2>
+                      <p class="mb-0">Задача организации, в особенности же постоянный количественный рост и сфера нашей активности требуют определения и уточнения дальнейших направлений развития. С другой стороны реализация намеченных плановых заданий позволяет выполнять важные задания по разработке новых предложений..</p>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="post-card card my-md-3">
+                  <a href="#">
+                    <div class="card-img card-img-top">
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                    </div>
+                    <div class="card-body p-3 d-flex flex-column gap-2">
+                      <span>24 Дек, 2024</span>
+                      <h2 class="h6 fw-medium text-black mb-0">Название статьи</h2>
+                      <p class="mb-0">Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм деятельности в значительной степени обуславливает создание дальнейших направлений развития.</p>
+                    </div>
+                  </a>
+                </article>
+              </div>
+              <div class="swiper-slide">
+                <article class="post-card card my-md-3">
+                  <a href="#">
+                    <div class="card-img card-img-top">
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                    </div>
+                    <div class="card-body p-3 d-flex flex-column gap-2">
+                      <span>24 Дек, 2024</span>
+                      <h2 class="h6 fw-medium text-black mb-0">Название статьи</h2>
+                      <p class="mb-0">Повседневная практика показывает, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании модели развития. Товарищи! консультация с широким активом играет важную роль в формировании дальнейших направлений развития.</p>
+                    </div>
+                  </a>
+                </article>
               </div>
             </div>            
-            <!-- <div class="swiper-button-prev d-none d-md-flex">
+            <div class="swiper-button-prev d-none d-md-flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
                 <path d="M8.5 14.8096L1.5 7.80957L8.5 0.80957" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
@@ -413,7 +478,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="10" height="16" viewBox="0 0 10 16" fill="none">
                 <path d="M1.5 0.80957L8.5 7.80957L1.5 14.8096" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
-            </div> -->
+            </div>
           </div>
         </div>
       </section>
