--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                 <path d="M1.5 0.80957L8.5 7.80957L1.5 14.8096" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
+            <div class="swiper-pagination position-static mt-3 d-md-none"></div>
           </div>
         </div>
       </section>
@@ -479,6 +480,7 @@
                 <path d="M1.5 0.80957L8.5 7.80957L1.5 14.8096" stroke="#9AA2B3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
+            <div class="swiper-pagination position-static mt-3 d-md-none"></div>
           </div>
         </div>
       </section>
