--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <article class="post-card card my-md-3">
                   <a href="#">
                     <div class="card-img card-img-top">
-                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
                     <div class="card-body p-3 d-flex flex-column gap-2">
                       <span>24 Дек, 2024</span>
@@ -417,7 +417,7 @@
                 <article class="post-card card my-md-3">
                   <a href="#">
                     <div class="card-img card-img-top">
-                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
                     <div class="card-body p-3 d-flex flex-column gap-2">
                       <span>24 Дек, 2024</span>
@@ -431,7 +431,7 @@
                 <article class="post-card card my-md-3">
                   <a href="#">
                     <div class="card-img card-img-top">
-                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
                     <div class="card-body p-3 d-flex flex-column gap-2">
                       <span>24 Дек, 2024</span>
@@ -445,7 +445,7 @@
                 <article class="post-card card my-md-3">
                   <a href="#">
                     <div class="card-img card-img-top">
-                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
                     <div class="card-body p-3 d-flex flex-column gap-2">
                       <span>24 Дек, 2024</span>
@@ -459,7 +459,7 @@
                 <article class="post-card card my-md-3">
                   <a href="#">
                     <div class="card-img card-img-top">
-                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="">   -->
+                      <!-- <img src="" class="img-fluid h-100 w-100 object-fit-cover" alt="Название статьи">   -->
                     </div>
                     <div class="card-body p-3 d-flex flex-column gap-2">
                       <span>24 Дек, 2024</span>
@@ -554,6 +554,96 @@
             <div class="col d-flex flex-column align-items-center">
               <img src="./assets/img/content-image-5.png" alt="" class="img-fluid" loading="lazy" />
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA -->
+      <section class="cta-section text-white">
+        <div class="container">
+          <div class="row g-4 g-lg-5 align-items-center">
+            <div class="col-md-8 d-flex flex-column gap-3">
+              <h2 class="h3 mb-0 fw-bold">Присоединитесь  как специалист</h2>
+              <p class="mb-0">Рекламный текст Рекламный текст Рекламный текст Рекламный текстРекламный текст Рекламный </p>
+            </div>
+            <div class="col-md-4 d-flex justify-content-md-end">
+              <a href="#" class="btn btn-lg btn-light rounded-pill text-truncate">Присоединиться</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FAQ -->
+      <section class="faq-section">
+        <div class="container d-flex flex-column">
+          <div class="d-flex flex-column gap-3 align-items-center">
+            <h2 class="h2 mb-0">Часто задаваемые вопросы</h2>
+            <p class="mb-0">У вас остались вопросы? Напишите в чат поддержки</p>
+          </div>
+          <div class="faq-list accordion d-flex flex-column" id="faqListAccordion">
+            <div class="accordion-item">
+              <h5 class="accordion-header" id="faqHeading-1">
+                <button class="accordion-button collapsed fw-medium text-black px-0 rounded-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#faqPanel-1" aria-expanded="false" aria-controls="faqPanel-1">
+                  How is TruMen Eva different from apps for finding a psychologist?
+                </button>
+              </h5>
+              <div id="faqPanel-1" class="accordion-collapse collapse" aria-labelledby="faqHeading-1">
+                <div class="accordion-body">
+                  <p>TruMen Eva is not an app for finding psychologists. The possibility of seeking psychological help and support arises when app participants are unable to jointly address the challenges and requests they face.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h5 class="accordion-header" id="faqHeading-2">
+                <button class="accordion-button collapsed fw-medium text-black px-0 rounded-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#faqPanel-2" aria-expanded="false" aria-controls="faqPanel-2">
+                  How is TruMen Eva different from apps for finding a psychologist?
+                </button>
+              </h5>
+              <div id="faqPanel-2" class="accordion-collapse collapse" aria-labelledby="faqHeading-2">
+                <div class="accordion-body">
+                  <p>TruMen Eva is not an app for finding psychologists. The possibility of seeking psychological help and support arises when app participants are unable to jointly address the challenges and requests they face.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h5 class="accordion-header" id="faqHeading-3">
+                <button class="accordion-button collapsed fw-medium text-black px-0 rounded-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#faqPanel-3" aria-expanded="false" aria-controls="faqPanel-3">
+                  How is TruMen Eva different from apps for finding a psychologist?
+                </button>
+              </h5>
+              <div id="faqPanel-3" class="accordion-collapse collapse" aria-labelledby="faqHeading-3">
+                <div class="accordion-body">
+                  <p>TruMen Eva is not an app for finding psychologists. The possibility of seeking psychological help and support arises when app participants are unable to jointly address the challenges and requests they face.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h5 class="accordion-header" id="faqHeading-4">
+                <button class="accordion-button collapsed fw-medium text-black px-0 rounded-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#faqPanel-4" aria-expanded="false" aria-controls="faqPanel-4">
+                  How is TruMen Eva different from apps for finding a psychologist?
+                </button>
+              </h5>
+              <div id="faqPanel-4" class="accordion-collapse collapse" aria-labelledby="faqHeading-4">
+                <div class="accordion-body">
+                  <p>TruMen Eva is not an app for finding psychologists. The possibility of seeking psychological help and support arises when app participants are unable to jointly address the challenges and requests they face.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h5 class="accordion-header" id="faqHeading-5">
+                <button class="accordion-button collapsed fw-medium text-black px-0 rounded-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#faqPanel-5" aria-expanded="false" aria-controls="faqPanel-5">
+                  How is TruMen Eva different from apps for finding a psychologist?
+                </button>
+              </h5>
+              <div id="faqPanel-5" class="accordion-collapse collapse" aria-labelledby="faqHeading-5">
+                <div class="accordion-body">
+                  <p>TruMen Eva is not an app for finding psychologists. The possibility of seeking psychological help and support arises when app participants are unable to jointly address the challenges and requests they face.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex flex flex-column flex-sm-row justify-content-center">
+            <a href="#" class="btn btn-primary btn-lg rounded-pill">Чат поддержки</a>
           </div>
         </div>
       </section>
