--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
               Специалисты
             </a>
             <ul class="dropdown-menu p-0 overflow-hidden" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Психологи</a></li>
-              <li><a class="dropdown-item" href="#">Коучи</a></li>
-              <li><a class="dropdown-item" href="#">Энергопрактики</a></li>
+              <li><a class="dropdown-item" href="./specialists.html">Психологи</a></li>
+              <li><a class="dropdown-item" href="./specialists.html">Коучи</a></li>
+              <li><a class="dropdown-item" href="./specialists.html">Энергопрактики</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Блог</a>
+            <a class="nav-link" href="./blog.html">Блог</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Контакты</a>
+            <a class="nav-link" href="./contacts.html">Контакты</a>
           </li>
         </ul>
         <ul class="socials-list d-none d-lg-flex align-items-center justify-content-end gap-3 list-unstyled m-0">
@@ -94,7 +94,7 @@
         <div class="container-fluid d-flex flex-column">
           <div class="d-flex flex-column flex-lg-row justify-content-lg-between gap-2">
             <h2 class="h2 mb-0">Специалисты</h2>
-            <a href="#" class="read-more-btn d-flex align-items-center gap-2">
+            <a href="./specialists.html" class="read-more-btn d-flex align-items-center gap-2">
               Смотреть всех
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M12.5625 5.25L19.3125 12L12.5625 18.75M18.375 12L4.6875 12" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -359,7 +359,7 @@
         <div class="container-fluid d-flex flex-column gap-5 gap-lg-4">
           <div class="d-flex flex-column flex-lg-row justify-content-lg-between gap-2">
             <h2 class="h2 mb-0">Блог</h2>
-            <a href="#" class="read-more-btn d-flex align-items-center gap-2">
+            <a href="./blog.html" class="read-more-btn d-flex align-items-center gap-2">
               Смотреть все
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                 <path d="M12.5625 5.25L19.3125 12L12.5625 18.75M18.375 12L4.6875 12" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -624,17 +624,17 @@
         <div class="d-flex flex-column flex-md-row justify-content-between gap-md-5">
           <ul class="footer-nav list-unstyled d-flex flex-column m-md-0">
             <li><a href="./">Главная</a></li>
-            <li><a href="#">О проекте</a></li>
-            <li><a href="#">Блог</a></li>
+            <li><a href="#about" class="smoothScroll">О проекте</a></li>
+            <li><a href="./blog.html">Блог</a></li>
           </ul>
           <ul class="footer-nav list-unstyled d-flex flex-column m-md-0">
-            <li><a href="#">Специалисты</a></li>
-            <li><a href="#">Психологи</a></li>
-            <li><a href="#">Коучи</a></li>
-            <li><a href="#">Энергопрактики</a></li>
+            <li><a href="./specialists.html">Специалисты</a></li>
+            <li><a href="./specialists.html">Психологи</a></li>
+            <li><a href="./specialists.html">Коучи</a></li>
+            <li><a href="./specialists.html">Энергопрактики</a></li>
           </ul>
           <div class="footer-nav d-flex flex-column gap-md-3">
-            <h3 class="h6 m-0">Контакты</h3>
+            <a href="./contacts.html" class="h6 m-0">Контакты</a>
             <ul class="socials-list d-flex align-items-center gap-3 list-unstyled m-0">
               <li><a href="#"><img src="./assets/img/icons/linkedin-g.svg" alt="LinkedIn" /></a></li>
               <li><a href="#"><img src="./assets/img/icons/telegram-g.svg" alt="Telegram" /></a></li>
@@ -650,7 +650,7 @@
             <li><a href="#">Политика конфиденциальности</a></li>
             <li><a href="#">Документы компании</a></li>
           </ul>
-          <p class="copyright m-0">© 2023 TruMen </p>
+          <p class="copyright m-0">© 2023 TruMen</p>
         </div>
       </div>
     </footer>
@@ -663,13 +663,13 @@
           <div class="d-flex flex-column">
             <ul class="mobile-nav-menu d-flex flex-column list-unstyled m-0">
               <li><a href="#about" class="smoothScroll">О проекте</a></li>
-              <li><a href="#">Специалисты</a></li>
-              <li><a href="#">Психологи</a></li>
-              <li><a href="#">Коучи</a></li>
-              <li><a href="#">Энергопрактики</a></li>
-              <li><a href="#">Блог</a></li>
+              <li><a href="./specialists.html">Специалисты</a></li>
+              <li><a href="./specialists.html">Психологи</a></li>
+              <li><a href="./specialists.html">Коучи</a></li>
+              <li><a href="./specialists.html">Энергопрактики</a></li>
+              <li><a href="./blog.html">Блог</a></li>
               <li class="d-flex justify-content-between align-items-center gap-3">
-                <a href="#">Контакты</a>
+                <a href="./contacts.html">Контакты</a>
                 <ul class="socials-list d-flex align-items-center justify-content-end gap-3 list-unstyled m-0">
                   <li><a href="#"><img src="./assets/img/icons/linkedin.svg" alt="LinkedIn" /></a></li>
                   <li><a href="#"><img src="./assets/img/icons/telegram.svg" alt="Telegram" /></a></li>
@@ -680,7 +680,7 @@
           </div>
           <div class="modal-footer d-grid flex-column mt-auto p-0 border-0">
             <a href="#" class="btn btn-outline-primary rounded-pill m-0">Чат поддержки</a>
-            <a href="#" class="btn btn-primary rounded-pill m-0">Присоединиться к комьюнити</a>
+            <a href="#" data-bs-toggle="modal" data-bs-target="#joinCommunityModal" class="btn btn-primary rounded-pill m-0">Присоединиться к комьюнити</a>
           </div>
         </div>
       </div>
